--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,8 @@ dependencies:
   table_calendar: ^3.0.4
   country_flags: ^2.2.0
   google_fonts: ^4.0.4
-
+  provider: ^6.1.0
+  
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
